--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,12 +7,17 @@ allow_remote_control yes
 
 mouse_hide_wait 3.0
 
-#fonts
 #font_family      SauceCode Pro Nerd Font
-font_family      Fira Code
+font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+
+# Mapping specific unicode characters due to
+# some (desktop-enviroment)DE's fonts having
+# conflicts with my git-branch icon and firacode
+# not having the icon
+symbol_map U+F418,U+E725 SauceCode Pro Nerd Font
 
 cursor_blink_interval 0
 disable_ligatures cursor
