--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -53,11 +53,10 @@ memory {
 }
 
 volume master {
-    format = "♪: %volume"
-    format_muted = "♪: muted (%volume)"
+    format = ": %volume"
+    format_muted = ": %volume"
 }
 
 tztime local {
         format = " %Y-%m-%d %H:%M:%S"
 }
-
