--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@ allow_remote_control yes
 
 mouse_hide_wait 3.0
 
-#font_family      SauceCode Pro Nerd Font
-font_family      Hasklug Nerd Font
+#font_family      Hasklug Nerd Font
+font_family      SauceCode Pro Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
