Better kitty colors

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@ allow_remote_control yes
 
 mouse_hide_wait 3.0
 
-#font_family      SauceCode Pro Nerd Font
-font_family      Hasklug Nerd Font
+#font_family      Hasklug Nerd Font
+font_family      SauceCode Pro Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -22,46 +22,58 @@ symbol_map U+F418,U+E725 SauceCode Pro Nerd Font
 cursor_blink_interval 0
 disable_ligatures cursor
 
-foreground            #ebdbb2
-background            #272727
-selection_foreground  #655b53
-selection_background  #ebdbb2
-url_color             #d65c0d
-
-# black
-color0   #272727
-color8   #928373
-
-# red
-color1   #cc231c
-color9   #fb4833
-
-# green
-color2   #989719
-color10  #b8ba25
-
-# yellow
-color3   #d79920
-color11  #fabc2e
-
-# blue
-color4  #448488
-color12 #83a597
-
-# magenta
-color5   #b16185
-color13  #d3859a
-
-# cyan
-color6   #689d69
-color14  #8ec07b
-
-# white
-color7   #a89983
-color15  #ebdbb2
-
+# Gruvbox theme
 active_tab_foreground  #655b53
 active_tab_background  #ebdbb2
+
 inactive_tab_foreground  #ebdbb2
 inactive_tab_background  #655b53
+
 url_color #d79920
+
+background  #282828
+foreground  #ebdbb2
+
+cursor                #928374
+
+selection_foreground  #928374
+selection_background  #3c3836
+
+color0  #282828
+color8  #928374
+
+# red
+color1                #cc241d
+# light red
+color9                #fb4934
+
+# green
+color2                #98971a
+# light green
+color10               #b8bb26
+
+# yellow
+color3                #d79921
+# light yellow
+color11               #fabd2d
+
+# blue
+color4                #458588
+# light blue
+color12               #83a598
+
+# magenta
+color5                #b16286
+# light magenta
+color13               #d3869b
+
+# cyan
+color6                #689d6a
+# lighy cyan
+color14               #8ec07c
+
+# light gray
+color7                #a89984
+# dark gray
+color15               #928374
+
