--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -12,7 +12,7 @@ font pango: SauceCode Pro Nerd Font 10
 
 exec_always --no-startup-id setxkbmap -option caps:swapescape
 exec_always --no-startup-id xset r rate 230 50
-exec --no-startup-id change_wallpaper
+exec --no-startup-id set_wallpaper
 
 for_window [class="Firefox"] move container to workspace 1
 exec --no-startup-id firefox
