Added opacity to kitty and a compositor at the start of i3

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,6 +7,10 @@ allow_remote_control yes
 
 mouse_hide_wait 3.0
 
+# The opacity of the background. A number between 0 and 1,
+# where 1 is opaque and 0 is fully transparent.
+background_opacity 0.95
+
 #font_family      Hasklug Nerd Font
 font_family      SauceCode Pro Nerd Font
 bold_font        auto
