--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -18,7 +18,7 @@ exec_always --no-startup-id xset dpms 0 0 3600
 exec --no-startup-id compton
 exec --no-startup-id set_wallpaper
 
-for_window [class="Firefox"] move container to workspace 1
+for_window [class="firefox"] move container to workspace 1
 exec --no-startup-id firefox
 
 for_window [class="kitty"] move container to workspace 2
